--- a/index.html
+++ b/index.html
@@ -48,6 +48,11 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div class="container text-center">
+        <img class="d-block mx-auto mb-4" src="./images/elmo.jpg" alt="" width="200" height="200">
+        <h1>Welcome to Elmo's Hiking App</h1>
+        <a href="login.html" class="btn btn-info" role="button">Log in</a>
+   </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -55,7 +60,7 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/team99.js"></script>
+    <script src="./scripts/team_99.js"></script>
     <script src="./scripts/skeleton.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
