--- a/login.html
+++ b/login.html
@@ -48,6 +48,11 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div class="container">
+        <h1>Let's Login!</h1>
+    </div>
+    <div id="firebaseui-auth-container"></div>
+    <div id="loader">Loading...</div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -55,8 +60,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/team99.js"></script>
+    <script src="./scripts/team_99.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/authentication.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
