--- a/main.html
+++ b/main.html
@@ -48,6 +48,9 @@
 
     <!-- the body of your page goes here -->
     <!-- stuff -->
+    <div class="container text-center">
+        <h1>Hello, <span id = "name-goes-here"></span> We hope you brought pizza!</span></h1>
+   </div>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
@@ -55,8 +58,9 @@
     <!---------------------------------------------->
     <!-- Your own JavaScript functions go here    -->
     <!---------------------------------------------->
-    <script src="./scripts/team99.js"></script>
+    <script src="./scripts/team_99.js"></script>
     <script src="./scripts/skeleton.js"></script>
+    <script src="./scripts/main.js"></script>
     <!-- <script src="./scripts/script.js"></script> -->
 
 </body>
