added database studff

--- a/main.html
+++ b/main.html
@@ -50,7 +50,42 @@
     <!-- stuff -->
     <div class="container text-center">
         <h1>Hello, <span id = "name-goes-here"></span> We hope you brought pizza!</span></h1>
-   </div>
+        <hr>
+        <p>Quote of the day: <span id = "quote-goes-here"></span></p>
+    </div>
+
+    <div class="container">
+        <h1>Some popular hikes</h1>
+        <!-- Here is container for cards  -->
+        <div class="container">
+            <div id="hikes-go-here" class="row row-cols-auto">
+            </div>
+        </div>
+    </div>
+
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem;">
+            <img class="card-image card-img-top" src=" ..." alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a class="btn btn-primary card-href">Get Details</a>
+            </div>
+        </div>
+    </template>
+
+    <template id="hikeCardTemplate">
+        <div class="card py-2 mx-2" style="width: 18rem;">
+            <img class="card-image card-img-top" src=" ..." alt="...">
+            <div class="card-body">
+                <h5 class="card-title">Card title</h5>
+                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                    card's content.</p>
+                <a class="btn btn-primary card-href">Get Details</a>
+            </div>
+        </div>
+    </template>
 
     <!-- our own footer goes here-->
     <nav id="footerPlaceholder"></nav>
